# SmartDeskServer

./: CMakeLists.txt  README.md  shell.sh  start_all.py
FIleHistory/: app.py  back.py
SharedCSV/: CMakeLists.txt
SharedCSV/include/: client_handler.h  server.h
SharedCSV/resources/: class1.csv  class2.csv  class3.csv
SharedCSV/scripts/: read_csv.py  update_csv.py
SharedCSV/src/: json_handler.cpp  main.cpp  server.cpp
SharedFile/: app.py
SharedFile/instance/: shared_files.db
SharedFile/uploads/: 4b520b9e-097d-4de0-af30-6899f1aed21d.csv
UserInfo/: config.py
UserInfo/app/: __init__.py  error_handlers.py  models.py  services.py  utils.py
UserInfo/app/routes/: __init__.py  avatar.py  db.py  info.py  submission.py  user.py
UserInfo/migrations/versions/: 3bfcc4af9932_.py  67fcba3e00b7_.py
file_history/: app.py
file_history/uploads/DBMySQL_cpp/: DBMySQL_1.cpp
file_history/uploads/DCommit_cpp/: DCommit_3.cpp
file_history/uploads/DTag_cpp/: DTag_1.cpp
file_history/uploads/TagItemDelegate_cpp/: TagItemDelegate_3.cpp
include/: MessageHandler.h  client_handler.h  json_handler.h  message_handler.h
resources/: class1.csv  class2.csv  class3.csv  script.py  update_csv.py
resouses/: class1.csv  script.py  shell.sh
scripts/: read_csv.py  update_csv.py
src/: MessageHandler.cpp  client_handler.cpp  json_handler.cpp  main.cpp  message_handler.cpp
